refactor(tui): extract text.rs module with ScrollState
- Add new text.rs module for unicode-aware text handling
- Implement ScrollState for managing scrolling text animations
- Add scroll_text() for dynamic text truncation/scrolling
- Add truncate() for static text truncation
- Add unicode-width dependency for proper width calculations
- Wire ScrollState into App and tick event loop

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -25,6 +25,10 @@ api-client.workspace = true
 route-graph.workspace = true
 intel.workspace = true
 server = { path = "../server" }
+unicode-width = "0.2.0"
 
 [lints]
 workspace = true
+
+[dev-dependencies]
+insta = "1.45.1"
