chore: add automated code quality enforcement
- Add clippy lints for cognitive_complexity, too_many_lines, type_complexity
- Create .code-quality.toml with max line/function/complexity limits
- Add check-code-quality.sh script to validate code metrics
- Create pre-commit.sh hook that runs quality checks automatically
- Add setup-dev.sh script to install hooks and configure environment
- Update cargo config template with quality check aliases
- Document quality standards and setup process in README

Quality thresholds:
- Max file size: 500 lines
- Max function length: 100 lines
- Cognitive complexity: ≤ 15
- Cyclomatic complexity: ≤ 10
- Type complexity: ≤ 250

--- a/.cargo/config.toml.template
+++ b/.cargo/config.toml.template
@@ -51,3 +51,16 @@ strip = false
 # For macOS (zld linker):
 # [target.x86_64-apple-darwin]
 # rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
+
+[alias]
+# Run clippy with all lints enabled
+lint = "clippy --all-targets --all-features -- -D warnings"
+
+# Build with clippy checks (warnings only)
+build-check = "clippy --all-targets --all-features"
+
+# Check code quality before commit (strict mode)
+pre-commit = "clippy --all-targets --all-features -- -D clippy::cognitive_complexity -D clippy::too_many_lines -D clippy::unwrap_used"
+
+# Quick quality check (warnings as errors for key metrics)
+quality = "clippy --all-targets -- -W clippy::cognitive_complexity -W clippy::too_many_lines"
