--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -61,8 +61,8 @@ jobs:
               if (!body.includes(section.header)) {
                 errors.push(`Missing required section: "${section.header}"`);
               } else {
-                // Check that section isn't empty
-                const regex = new RegExp(`${section.header}\\s*([\\s\\S]*?)(?=##|$)`);
+                // Check that section isn't empty (look for next ## level header or end of string)
+                const regex = new RegExp(`${section.header}\\s*([\\s\\S]*?)(?=^## |$)`, 'm');
                 const match = body.match(regex);
                 if (match && match[1].trim().length < 10) {
                   errors.push(`"${section.header}" section appears empty (min 10 chars)`);
