feat: automate changelog generation for releases (#7)
* feat: automate changelog generation for releases

- Generate categorized changelogs from merged PRs
- Group changes by type: features, fixes, CI/CD, testing, docs, etc
- Use emoji markers for better readability
- Include version info and full changelog links
- Apply to both release PRs and GitHub releases
- Fallback to commit messages if no PRs found

The workflow now automatically creates properly formatted release notes
with PR links organized by category, making releases much more readable.

* refactor: eliminate DRY violation in changelog generation

- Extract changelog logic into reusable composite action
- Update both create-release and publish-release workflows to use action
- Reduces code duplication from ~200 lines to single action
- Makes maintenance easier - single source of truth
- Action can be tested independently

This addresses the DRY principle violation where changelog generation
was duplicated across multiple workflows.

---------

Co-authored-by: chozandrias76 <chozandrias76@users.noreply.github.com>

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -100,41 +100,45 @@ jobs:
       - name: Push release branch
         run: git push origin "${{ steps.branch.outputs.name }}"
       
+      - name: Generate changelog
+        id: changelog
+        uses: ./.github/actions/generate-changelog
+        with:
+          previous-version: ${{ steps.current_version.outputs.version }}
+          github-token: ${{ github.token }}
+      
+      - name: Build release PR body
+        id: pr_body
+        run: |
+          CHANGELOG="${{ steps.changelog.outputs.changelog }}"
+          
+          # Add release header
+          PR_BODY="## Release v${{ steps.new_version.outputs.version }}\n\n"
+          PR_BODY="$PR_BODY$CHANGELOG"
+          
+          # Add version info
+          PR_BODY="$PR_BODY\n## 📋 Version Info\n"
+          PR_BODY="$PR_BODY- **Previous**: \`${{ steps.current_version.outputs.version }}\`\n"
+          PR_BODY="$PR_BODY- **Current**: \`${{ steps.new_version.outputs.version }}\`\n"
+          PR_BODY="$PR_BODY- **Type**: ${{ inputs.version_bump }}\n"
+          if [ "${{ inputs.prerelease }}" = "true" ]; then
+            PR_BODY="$PR_BODY- **Pre-release**: Yes\n"
+          fi
+          
+          # Save to file
+          echo -e "$PR_BODY" > /tmp/pr-body.md
+      
       - name: Create PR to main
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
+          PR_BODY=$(cat /tmp/pr-body.md)
+          
           gh pr create \
             --base main \
             --head "${{ steps.branch.outputs.name }}" \
             --title "release: version ${{ steps.new_version.outputs.version }}" \
-            --body "## Release ${{ steps.new_version.outputs.version }}
-
-          ### Version Bump
-          - Type: **${{ inputs.version_bump }}**
-          - Previous version: \`${{ steps.current_version.outputs.version }}\`
-          - New version: \`${{ steps.new_version.outputs.version }}\`
-          - Pre-release: ${{ inputs.prerelease }}
-
-          ### Summary
-          This PR merges the release branch into \`main\` for version ${{ steps.new_version.outputs.version }}.
-
-          ### Changes
-          - Version bumped in Cargo.toml
-          - Cargo.lock updated
-
-          ### Pre-merge Checklist
-          - [ ] All CI checks pass
-          - [ ] All tests pass on all platforms
-          - [ ] Security audit passes
-          - [ ] Code coverage meets requirements
-          - [ ] Release notes reviewed
-
-          ### Test Results
-          CI will run comprehensive tests across all platforms. Review the checks below before merging.
-
-          ---
-          *This PR was automatically created by the Create Release workflow.*"
+            --body "$PR_BODY"
       
       - name: Create PR from develop to release branch
         env:
