--- a/crates/intel/Cargo.toml
+++ b/crates/intel/Cargo.toml
@@ -14,6 +14,7 @@ tokio.workspace = true
 
 api-client.workspace = true
 route-graph.workspace = true
+anyhow = "1.0.100"
 
 [dev-dependencies]
 mockito = "1.2"
