feat: add SCLogistics data extraction system
- Add sc-data-extractor library crate for parsing SCLogistics XML/JSON
  - Starmap parser for 1,900+ locations with quantum travel data
  - Shop inventory parser for commodity pricing
  - SQLite database builder with optimized schema and transactions

- Add sc-logistics-importer CLI tool
  - Commands: all, starmap, shops, stats
  - Configurable paths for input/output
  - Full import in ~1 second with progress reporting

- Database schema with 4 tables:
  - locations: starmap objects with QT parameters
  - shops: trading terminals
  - shop_items: commodity inventory and pricing
  - quantum_routes: reserved for future route graph

- Performance:
  - Parses 1,915 locations + 12,148 items in ~1 second
  - Uses transactions for efficient bulk inserts
  - Creates 4.3MB SQLite database

- Documentation:
  - Library and CLI README files
  - Integration guide (SCLOGISTICS_INTEGRATION.md)
  - Quick start guide (QUICKSTART_DATA_IMPORT.md)
  - Data sources reference (DATA_SOURCES.md)

- Testing: 6/6 unit tests passing

Closes integration with SCLogistics repository data.

--- a/.envrc
+++ b/.envrc
@@ -11,8 +11,9 @@ export CARGO_TARGET_DIR="/tmp/cargo-target-sc-interdiction"
 # Incremental compilation (speeds up rebuilds)
 export CARGO_INCREMENTAL=1
 
-# Add cargo to PATH
-export PATH="$HOME/.cargo/bin:$PATH"
+# Add project .bin directory to PATH FIRST (wrappers for cargo, git, etc.)
+# This must come before system cargo to intercept commands
+PATH_add .bin
 
 # Add project directory to PATH for make.cmd wrapper
 # This allows running 'make.cmd build' from anywhere when in this project
