--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ dashmap = "6.0"
 api-client = { path = "crates/api-client" }
 route-graph = { path = "crates/route-graph" }
 intel = { path = "crates/intel" }
+sc-data-extractor = { path = "crates/sc-data-extractor" }
 
 [workspace.lints.rust]
 unsafe_code = "deny"
