--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Check PR Title and Description
         uses: actions/github-script@v7
+        if: false # disabled for now
         with:
           script: |
             const { data: pr } = await github.rest.pulls.get({
